--- a/main.html
+++ b/main.html
@@ -6,7 +6,30 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<header>
+        <h1>AVATAR</h1>
+        </header>
+        <nav id="nav-actor">
+           <a href="#actor">nav-actor</a>
+        </nav>
+        <nav id="nav-quote">
+            <a href="#quote">nav-quote</a>
+        </nav>
+   <p>A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.</p>
+    <section id="actor">
+            <p>This is an actors name </p>
+            <p>This is a dilouge from movie</p>
+    </section>
+    <section id="quote">
+            <blockquote>This is quote from movie</blockquote>
+    </section>
+    <aside>
+        <p>Rated 8.0 on IMDB</p>
+        <p>Released on 23rd feb 2020</p>
+    </aside>
+    <footer>
+        <p>Produced by:&lt name &gt</p>
+    </footer>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
