--- a/main.html
+++ b/main.html
@@ -15,12 +15,14 @@
         <nav id="nav-quote">
             <a href="#quote">nav-quote</a>
         </nav>
-   <p>A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.</p>
-    <section id="actor">
+   <summary>
+            A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.
+        </summary>
+    <section class="actor">
             <p>This is an actors name </p>
             <p>This is a dilouge from movie</p>
     </section>
-    <section id="quote">
+    <section class="quote">
             <blockquote>This is quote from movie</blockquote>
     </section>
     <aside>
