--- a/main.html
+++ b/main.html
@@ -18,11 +18,11 @@
    <summary>
             A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.
         </summary>
-    <section class="actor">
+    <section id="actor">
             <p>This is an actors name </p>
             <p>This is a dilouge from movie</p>
     </section>
-    <section class="quote">
+    <section id="quote">
             <blockquote>This is quote from movie</blockquote>
     </section>
     <aside>
