--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <header>
         <h1>AVATAR</h1>
         </header>
-        <nav id="nav-actor">
-           <a href="#actor">nav-actor</a>
+         <nav id="actor">
+           <a href="#actor">Actor</a>
         </nav>
-        <nav id="nav-quote">
-            <a href="#quote">nav-quote</a>
+        <nav id="quote">
+            <a href="#quote">Quote</a>
         </nav>
    <summary>
             A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.
