--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <header>
         <h1>AVATAR</h1>
         </header>
-         <nav id="actor">
+         <nav id="#nav-actor">
            <a href="#actor">Actor</a>
         </nav>
-        <nav id="quote">
+        <nav id="#nav-quote">
             <a href="#quote">Quote</a>
         </nav>
    <summary>
