--- a/main.html
+++ b/main.html
@@ -7,22 +7,25 @@
 </head>
 
 <header>
+        <header>
         <h1>AVATAR</h1>
         </header>
-         <nav id="#nav-actor">
-           <a href="#actor">Actor</a>
+        <!-- NAV NEEDS TO MODIFY -->
+        <nav id="actor">
+           <a href="#nav-actor">Actor</a>
         </nav>
-        <nav id="#nav-quote">
-            <a href="#quote">Quote</a>
+        <nav id="quote">
+            <a href="#nav-quote">Quote</a>
         </nav>
-   <summary>
+        <summary>
             A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.
         </summary>
-    <section id="actor">
+   
+    <section id="nav-actor">
             <p>This is an actors name </p>
             <p>This is a dilouge from movie</p>
     </section>
-    <section id="quote">
+    <section id="nav-quote">
             <blockquote>This is quote from movie</blockquote>
     </section>
     <aside>
@@ -32,9 +35,6 @@
     <footer>
         <p>Produced by:&lt name &gt</p>
     </footer>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
 </body>
 
