--- a/main.html
+++ b/main.html
@@ -11,21 +11,32 @@
         <h1>AVATAR</h1>
         </header>
         <!-- NAV NEEDS TO MODIFY -->
-        <nav id="actor">
+<!--         <nav id="actor">
            <a href="#nav-actor">Actor</a>
         </nav>
         <nav id="quote">
             <a href="#nav-quote">Quote</a>
-        </nav>
+        </nav> -->
+	<nav class="navbar">
+    
+    <ul>
+        <li id="actor">
+            <a href="#actor" >Actor</a>
+        </li>
+        <li id="quote">
+            <a href="#quote" >Quote</a>
+	    </li>
+    </ul>
+</nav>
         <summary>
             A commitment phobe freaks out and escapes to Australia when he finds out that a woman is head over heels in love with him, only to fall in love with a woman who is already engaged.
         </summary>
    
-    <section id="nav-actor">
+    <section id="actor">
             <p>This is an actors name </p>
             <p>This is a dilouge from movie</p>
     </section>
-    <section id="nav-quote">
+    <section id="quote">
             <blockquote>This is quote from movie</blockquote>
     </section>
     <aside>
