--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
         <nav id="quote">
             <a href="#nav-quote">Quote</a>
         </nav> -->
-	<nav class="navbar">
+	<nav>
     
     <ul>
-        <li id="actor">
+        <li id="nav-actor">
             <a href="#actor" >Actor</a>
         </li>
-        <li id="quote">
+        <li id="nav-quote">
             <a href="#quote" >Quote</a>
 	    </li>
     </ul>
